# textsumm

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: analyse.sh  run_check.sh
src/textsumm/: main.py
tests/: test_main.py
