[project]
name = "textsumm-kushagra"
version = "0.2.0"
description = "A CLI tool that summarises text files"
authors = [
    {name = "Kushagra Tewari",email = "kushagratewari.eng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all] (>=0.9.0,<0.13.0)",
    "rich (>=14.3.3,<15.0.0)"
]

[tool.poetry]
packages = [{include = "textsumm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
[project.scripts]
textsumm = "textsumm.main:app"